some minor changes

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Gerhard Pegel</title>
+<title>GhostCobraNL</title>
 <link href="tools/style.css" rel="stylesheet" type="text/css" media="screen" />
 <link href="tools/font-awesome/css/font-awesome.css" type="text/css" rel="stylesheet">
 <script type="text/javascript" src="tools/jquery.min.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+<!-- <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css"> -->
+<link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
 <link href="https://file.myfontastic.com/n6vo44Re5QaWo8oCKShBs7/icons.css" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale = 1.0, user-scalable = no">
 
@@ -16,18 +17,19 @@
 <div class="wrapper">
 	<div class="centered">
 		<div class="header">
-			<h1 id="logo">Gerhard Pegel</h1>
-			<p class="line1">- Monitoring Engineer -</p>
+			<h1 id="logo">GhostCobraNL</h1>
+			<p class="line1">- Gamer -</p>
 		</div>
 
 		<div class="content">
-				<p>Zabbix Certified Professional and Zabbix Certified Specialist. <br><br> Redis, ElasticSearch, Logstash, Kibana and Grafana specialist.</p>
+				<p>Minecraft server:</p>
+				<p>mc1.ghostcobra.nl</p>
 		</div>
 
 		<div class="social">
 		<p>
-			<a href="https://twitter.com/GerhardPegel"><span class="socicon-twitter"></span></a>
-      <a href="https://github.com/GPegel"><span class="socicon-github"></span></a>
+			<a href="https://twitter.com/JasperPegel"><span class="socicon-twitter"></span></a>
+      <a href="https://www.instagram.com/jpegel2k7"><span class="socicon-instagram"></span></a>
 		</p>
 		</div>
 	</div>
