--- a/index.html
+++ b/index.html
@@ -17,19 +17,12 @@
 <div class="wrapper">
 	<div class="centered">
 		<div class="header">
-			<h1 id="logo">GhostCobraNL</h1>
-			<p class="line1">- Gamer -</p>
+			<h1 id="logo">Minecraft server: mc1.ghostcobra.nl<br><br><br></h1>
 		</div>
-
-		<div class="content">
-				<p>Minecraft server:</p>
-				<p>mc1.ghostcobra.nl</p>
-		</div>
-
 		<div class="social">
 		<p>
 			<a href="https://twitter.com/JasperPegel"><span class="socicon-twitter"></span></a>
-      <a href="https://www.instagram.com/jpegel2k7"><span class="socicon-instagram"></span></a>
+      		<a href="https://www.instagram.com/jpegel2k7"><span class="socicon-instagram"></span></a>
 		</p>
 		</div>
 	</div>
