--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>GhostCobraNL</title>
 <link href="tools/style.css" rel="stylesheet" type="text/css" media="screen" />
-<link href="tools/font-awesome/css/font-awesome.css" type="text/css" rel="stylesheet">
 <script type="text/javascript" src="tools/jquery.min.js"></script>
-<!-- <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css"> -->
-<link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
-<link href="https://file.myfontastic.com/n6vo44Re5QaWo8oCKShBs7/icons.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Russo+One&display=swap" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale = 1.0, user-scalable = no">
 
 </head>
@@ -17,7 +14,7 @@
 <div class="wrapper">
 	<div class="centered">
 		<div class="header">
-			<h1 id="logo">Minecraft server: mc1.ghostcobra.nl<br><br><br></h1>
+			<h1 id="logo">Minecraft servers: mc1.ghostcobra.nl<br><br><br></h1>
 		</div>
 		<div class="social">
 		<p>
