--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="wrapper">
 	<div class="centered">
 		<div class="header">
-			<h1 id="logo">Minecraft servers: mc1.ghostcobra.nl<br><br><br></h1>
+			<h1 id="logo">Minecraft server: mc1.ghostcobra.nl<br><br><br></h1>
 		</div>
 		<div class="social">
 		<p>
